Make sure content lists don't look at "anonymous nodes" (nodes that are anonymous descendants of the root of the list).  Bug 240851, r=sicking, sr=jst